--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=Laravel_sanctum
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u906990591_BadrAcademyLaR
+DB_USERNAME=u906990591_mohamedabdo7
+DB_PASSWORD=8&Yp4oY9K
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
