--- a/.env
+++ b/.env
@@ -11,9 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u906990591_BadrAcademyLaR
-DB_USERNAME=u906990591_mohamedabdo7
-DB_PASSWORD=8&Yp4oY9K
+DB_DATABASE=u906990591_rocketeer
+DB_USERNAME=u906990591_mohamedlamell
+DB_PASSWORD="3m[cS#J#Pd/V"
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
